--- a/MovieApp/package.json
+++ b/MovieApp/package.json
@@ -27,6 +27,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
